docs: change the svg to show in all themes

--- a/theme/2018-edition.css
+++ b/theme/2018-edition.css
@@ -7,3 +7,9 @@ span.caption code {
     font-size: 0.875em;
     font-weight: 400;
 }
+
+.opacity-background{
+    fill: var(--bg);
+    filter: invert(1);
+    opacity: 0.5;
+}
